Added fork options to enable parallel runs through maven. Next step is to add data provider to spock spec to remove the need for the bash script.